# shortlink-rs

./: .gitignore  Cargo.toml  README.md  wrangler-example.toml
.devcontainer/: devcontainer.json
src/: lib.rs
src/shortlink/: mod.rs  options.rs  root.rs
src/shortlink/v1/: create.rs  default.rs  delete.rs  get.rs  list.rs  mod.rs  update.rs
