[package]
name = "shortlink-rs"
version = "0.1.0"
edition = "2021"

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.5.0" }
worker-macros = { version = "0.5.0" }
console_error_panic_hook = { version = "0.1.1" }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
getrandom = { version = "0.3.1", features = ["wasm_js"] }
chrono = "0.4.40"
paste = "1.0.15"

[profile.release]
lto = true
strip = true
codegen-units = 1
